LU-2766 llite: don't ignore layout for group lock request

ignore_layout can be set for operations that layout won't be changed,
typically page operations. Ignoring layout change in group lock
request will confuse layout change code at LOV layer and hit
assertion.

Signed-off-by: Jinshan Xiong <jinshan.xiong@intel.com>
Change-Id: I0f628e81d7f61a9b00ab2941ad3bcde4b32ecfe2